--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+<header>
+  <h1>HOLA AMIGUITAS</h1>
+  <h2> a trabajar en git!!</h2>
+</header>
+ 
     
 </body>
 </html>
